--- a/.chezmoidata.yaml
+++ b/.chezmoidata.yaml
@@ -1,3 +1,8 @@
+apple:
+  computername: "Krish's MacBook"
+  hostname: "kkrishguptaa"
+  localhostname: "kkrishguptaa.local"
+
 git:
   config:
     user:
